optimisation(launcher):Change GC to use G1.